--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "gulp": "^3.9.1",
+    "gulp": "^3.9.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-minify-css": "^1.2.4",
@@ -17,6 +17,7 @@
     "hugo": "0.0.3",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.0",
+    "npm": "^6.7.0",
     "popper.js": "^1.14.1",
     "rimraf": "^2.6.1"
   }
